# hello_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/hello/: config.py  entrypoints.py  main.py  models.py  services.py
src/zont_tg_notifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_hello_handler.py
