[project]
version="0.0.1"
name="zont-tg-notifier"
description="Telegram bot for notify about zont events for users"
readme="README.md"
requires-python= ">=3.11"


[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.21"
]

type_check= [
    "mypy"  
]

linters = [
    "isort",
    "black"
]
pre_commit = [
    "pre-commit >= 3.3.2"
]

[tool.isort]
profile = "black"
