[project]
version="0.0.1"
name="zont-tg-notifier"
description="Telegram bot for notify about zont events for users"
readme="README.md"
requires-python= ">=3.11"


[project.optional-dependencies]

ci_depends = [
    "mypy",
    "isort",
    "black",
    "pytest>=7",
]

pre_commit = [
    "pre-commit >= 3.3.2"
]

[tool.isort]
profile = "black"
