[project]
version="0.0.1"
name="hello_app"
description="Basic hello app for devops course in hse"
readme="README.md"
requires-python= ">=3.11"

dependencies = [
    "Flask",
    "python-dotenv",
    "uwsgi"
]


[project.optional-dependencies]

ci_depends = [
    "mypy",
    "isort",
    "black",
    "pytest>=7",
]

pre_commit = [
    "pre-commit >= 3.3.2"
]

[tool.isort]
profile = "black"
